--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <p>Thank you for scanning this tag. We’re trying to find this cat’s home.</p>
 
   <div class="status" id="status">Getting your location...</div>
+  <button id="retry-btn" style="display:none;" onclick="getLocation()">📍 Retry Location</button>
 
   <script src="script.js"></script>
 </body>
