--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   <div class="status" id="status">Getting your location...</div>
   <button id="retry-btn" style="display:none;" onclick="location.reload()">📍 Retry Location</button>
 
-
+  <a
+  href="https://wa.me/60192166699?text=Hi%2C%20I%20found%20your%20cat!"
+  target="_blank"
+  class="contact-button whatsapp"
+>
+  📲 Message via WhatsApp
+</a>
   <script src="script.js"></script>
 </body>
 </html>
