whatsapp and telegram message

--- a/index.html
+++ b/index.html
@@ -23,13 +23,23 @@
   <div class="status" id="status">Getting your location...</div>
   <button id="retry-btn" style="display:none;" onclick="location.reload()">📍 Retry Location</button>
 
-  <a
-  href="https://wa.me/60192166699?text=Hi%2C%20I%20found%20your%20cat!"
-  target="_blank"
-  class="contact-button whatsapp"
->
-  📲 Message via WhatsApp
-</a>
+  <div id="contact">
+    <h3>🐱 Want to help?</h3>
+    <a
+      href="https://wa.me/60123456789?text=Hi%2C%20I%20found%20your%20cat!"
+      target="_blank"
+      class="contact-button whatsapp"
+    >
+      📲 Message via WhatsApp
+    </a>
+    <a
+      href="https://t.me/your_username"
+      target="_blank"
+      class="contact-button telegram"
+    >
+      💬 Message via Telegram
+    </a>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
