--- a/index.html
+++ b/index.html
@@ -3,50 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lost Cat Found</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 2rem;
-    }
-    .status {
-      margin-top: 2rem;
-      font-size: 1.2rem;
-    }
-  </style>
+  <title>Cat Info</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <h1>🐾 Lost Cat Found!</h1>
-  <p>Thank you for scanning this tag. We’re trying to find this cat’s home.</p>
+ <div class="container">
+  <div class="card">
+    <img id="cat-photo" src="" alt="Cat Photo" />
+    <h2 id="cat-name">Loading...</h2>
+    <p id="cat-description"></p>
+    <div class="contact-buttons">
+      <a id="wa-btn" class="contact-button whatsapp" href="#" target="_blank">📱 WhatsApp</a>
+      <a id="tg-btn" class="contact-button telegram" href="#" target="_blank">💬 Telegram</a>
+    </div>
+    <p id="status">📍 Getting your location...</p>
+    <button id="retry-btn" style="display: none;">🔄 Retry</button>
+  </div>
+</div>
 
-  <div class="status" id="status">Getting your location...</div>
-  <button id="retry-btn" style="display:none;" onclick="location.reload()">📍 Retry Location</button>
-
-  <!-- <div id="contact">
-    <h3>🐱 Want to help?</h3>
-    <a
-      href="https://wa.me/60192166699?text=Hi%2C%20I%20found%20your%20cat!"
-      target="_blank"
-      class="contact-button whatsapp"
-    >
-      📲 Message via WhatsApp
-    </a>
-    <a
-      href="https://t.me/tfqnet"
-      target="_blank"
-      class="contact-button telegram"
-    >
-      💬 Message via Telegram
-    </a>
-  </div> -->
-
-  <h2 id="cat-name"></h2>
-<img id="cat-photo" style="max-width: 200px;" />
-<p id="cat-description"></p>
-
-<a id="wa-btn" class="btn">📲 WhatsApp Owner</a>
-<a id="tg-btn" class="btn">💬 Telegram Owner</a>
 
   <script src="script.js"></script>
   <script src="index.js"></script>
