add fallback img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <div class="container">
     <div class="card">
-      <img id="cat-photo" src="" alt="Cat Photo" />
+      <img id="cat-photo" src="" alt="Cat Photo" onerror="this.onerror=null; this.src='images/fallback.png';" />
+
 
       <h2 id="cat-name">Loading...</h2>
       <p id="cat-description"></p>
